[package]
name = "proxy_checker"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
rustls = { version = "0.23.12"}
tracing = "0.1.40"
libc = "0.2.155"
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.3"
http = "1.1.0"
h2 = "0.4.5"
bytes = "1.7.1"
serde = "1.0.208"
serde_json = "1.0.125"
clap = { version = "4.5.15", features = ["derive"] }
